03.business-os/AICompanyManager/900.meta/axu_csv_r3_white_screen_diag_20260501_225235/010_node_check.txt
============================================================
node --check server
============================================================
SERVER_NODE_CHECK_OK

============================================================
node --check clean core
============================================================
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/assets/js/aicm-production-core.js:5800
    if (action === "task-ledger-csv-import") {\n      aicmCsvImportLoadedReadBeforeImport();\n      return;\n    }
                                              ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.14.1
CORE_NODE_CHECK_OK
